fix rancher-integration link
(cherry picked from commit ca9a835bb18ca07d74ae74e8f32642fbe133f4a9)

--- a/pkg/harvester/l10n/zh-hans.yaml
+++ b/pkg/harvester/l10n/zh-hans.yaml
@@ -917,7 +917,7 @@ harvester:
     internal:
       rancher:
         title: 访问内嵌的 Rancher UI
-        titleDescription: 仅支持使用内嵌的 Rancher 仪表板来进行调试和验证。有关 Rancher 的多集群和多租户集成，请参阅<a target="_blank" href="https://docs.harvesterhci.io/v1.1/rancher/rancher-integration" rel="noopener noreferrer nofollow">此文档</a>。
+        titleDescription: 仅支持使用内嵌的 Rancher 仪表板来进行调试和验证。有关 Rancher 的多集群和多租户集成，请参阅<a target="_blank" href="https://docs.harvesterhci.io/v1.2/rancher/index" rel="noopener noreferrer nofollow">此文档</a>。
       longhorn:
         title: 访问内嵌的 Longhorn UI
         titleDescription: 仅支持使用内嵌的 Longhorn UI 来进行调试和验证。
