--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -428,7 +428,7 @@ harvester:
       message:
         success: 'Perform host { name } { operation } successfully.'
     ntp:
-      label: Ntp Servers Addresses
+      label: NTP Server Addresses
       tips: You can configure multiple IPv4 addresses or host addresses.
       placeholder: e.g. IPv4
       ntpSyncStatus:
@@ -1286,7 +1286,7 @@ advancedSettings:
     'harv-support-bundle-image': Support bundle image configuration. Find different versions in <a href="https://hub.docker.com/r/rancher/support-bundle-kit/tags" target="_blank">rancher/support-bundle-kit</a>.
     'harv-release-download-url': This setting allows you to configure the <code>upgrade release download</code> URL address. Harvester will get the ISO URL and checksum value from the (<code>$URL</code>/<code>$VERSION</code>/version.yaml) file hosted by the configured URL.
     'harv-default-vm-termination-grace-period-seconds': Config the VM termination grace period for VM stop.
-    'harv-ntp-servers': Configure Ntp server. You can configure multiple IPv4 addresses or host addresses.
+    'harv-ntp-servers': Configure NTP server. You can configure multiple IPv4 addresses or host addresses.
 
 typeLabel:
   kubevirt.io.virtualmachine: |-
