bootOrder tooltip refactoring
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -653,7 +653,7 @@ harvester:
       namespaces:
         label: Namespaces
     bootOrder:
-      details: Boot Orders
+      details: Boot Order
 
   volume:
     label: Volumes
