Add boot order tab to VM page
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -185,6 +185,7 @@ harvester:
   tab:
     volume: Volumes
     network: Networks
+    boot-order: Boot Order
     advanced: Advanced Options
     accessCredentials: Access Credentials
     pciDevices: PCI Devices
