Handle Nvidia toolkit addon spec
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -1130,6 +1130,15 @@ harvester:
     nvidiaDriverToolkit:
       titles:
         basic: Controller
+        image: Image
+        driver: Driver
+      image:
+        tag: Image Tag
+        repository: Image Repository
+      driver:
+        location: Driver Location
+      parsingSpecError:
+        The field 'spec.valuesContent' has invalid format.
 
   loadBalancer:
     label: Load Balancers
