Expose kubeconfig ttl setting in Harvester
Related to: https://github.com/harvester/harvester/issues/5874

Signed-off-by: Volker Theile <vtheile@suse.com>
(cherry picked from commit 84c2bb305fee9b639b36bb5aefbe5249ba1e82b7)
Signed-off-by: Volker Theile <vtheile@suse.com>

# Conflicts:
#	pkg/harvester/config/settings.js
#	pkg/harvester/l10n/en-us.yaml

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -1290,6 +1290,7 @@ advancedSettings:
     'harv-release-download-url': This setting allows you to configure the <code>upgrade release download</code> URL address. Harvester will get the ISO URL and checksum value from the (<code>$URL</code>/<code>$VERSION</code>/version.yaml) file hosted by the configured URL.
     'harv-default-vm-termination-grace-period-seconds': Config the VM termination grace period for VM stop.
     'harv-ntp-servers': Configure NTP server. You can configure multiple IPv4 addresses or host addresses.
+    'harv-kubeconfig-default-token-ttl-minutes': 'TTL (in minutes) applied on Harvester admin kubeconfig files. Default is 0, which means to never expire.'
 
 typeLabel:
   kubevirt.io.virtualmachine: |-
