Add descriptions to several components
Signed-off-by: Volker Theile <vtheile@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -728,6 +728,10 @@ harvester:
         inNamespaces: "Workloads in these namespaces"
       namespaces:
         label: Namespaces
+    labels:
+      description: ""
+    instanceLabels:
+      description: These labels are automatically synchronized to the Virtual Machine instance.
 
   volume:
     label: Volumes
