Add CPU Manager field to Hosts details page
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -351,6 +351,7 @@ harvester:
       serialNumber: Serial Number
       model: Model
       etcd: Witness Node
+      cpuManager: CPU Manager
     enableMaintenance:
       title: Enable Maintenance Mode
       protip: The operation will migrate all virtual machines on this node to other nodes.
