Add VM Cpu pinning checkbox
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -496,6 +496,8 @@ harvester:
         ShutdownAndRestartAfterEnable: Shutdown and Restart After Enable
         ShutdownAndRestartAfterDisable: Shutdown and Restart After Disable
         Shutdown: Shutdown
+    cpuPinning:
+      label: CPU Pinning
     restartNow: |-
       {restart, select,
         true {Restart}
