--- a/shell/assets/translations/en-us.yaml
+++ b/shell/assets/translations/en-us.yaml
@@ -5634,7 +5634,7 @@ tableHeaders:
   customVerbs: Custom Verbs
   description: Description
   expires: Expires
-  cpu: CPU
+  cpu: TEST SHELL
   currentReplicas: Current Replicas
   date: Date
   data: Data
