--- a/shell/assets/translations/en-us.yaml
+++ b/shell/assets/translations/en-us.yaml
@@ -5673,6 +5673,7 @@ tableHeaders:
   customVerbs: Custom Verbs
   description: Description
   cpu: CPU
+  expires: Expires
   currentReplicas: Current Replicas
   date: Date
   data: Data
