Add lvm node selector
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>

--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -1098,6 +1098,8 @@ harvester:
         label: Volume Group Type
       lvmVolumeGroup:
         label: Volume Group Name
+      node:
+        label: Node
     allowedTopologies:
       title: Allowed Topologies
       tooltip: Allowed Topologies helps scheduling virtual machines on hosts which match all of below expressions.
