--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -6,6 +6,7 @@ generic:
   labels: Labels
   inProgress: In Progress
   basic: Basic
+  loading: Loading...
 
 nav:
   group:
@@ -56,6 +57,12 @@ harvester:
         tip: Please enter a template name!
         success: 'Template { templateName } created successfully.'
         failed: 'Failed generated template!'
+    schedule:
+      title: Create Schedule
+      message:
+        tip: Please enter a schedule name!
+        success: 'Schedule { name } created successfully.'
+        failed: 'Failed create schedule!'
     cloneVM:
       title: Clone Virtual Machine
       name: New Virtual Machine Name
@@ -125,7 +132,7 @@ harvester:
       warning: Warning
       error: Error
   action:
-    createVM: Create a Virtual Machine
+    createVM: Create Virtual Machine
     start: Start
     restart: Restart
     softreboot: Soft Reboot
@@ -134,6 +141,8 @@ harvester:
     deepClone: Clone
     shallowClone: Clone Template
     unpause: Unpause
+    encryptImage: Encrypt Image
+    decryptImage: Decrypt Image
     ejectCDROM: Eject CD-ROM
     editVMQuota: Edit VM Quota
     launchFormTemplate: Launch instance from template
@@ -141,14 +150,19 @@ harvester:
     setDefaultVersion: Set default version
     addTemplateVersion: Add template version
     backup: Take Backup
+    createSchedule: Create Schedule
     restore: Restore
     restoreNewVM: Restore New
+    resumeSchedule: Resume
+    suspendSchedule: Suspend
     restoreExistingVM: Replace Existing
     migrate: Migrate
     abortMigration: Abort Migration
     createTemplate: Generate Template
     enableMaintenance: Enable Maintenance Mode
     disableMaintenance: Disable Maintenance Mode
+    enableCPUManager: Enable CPU Manager
+    disableCPUManager: Disable CPU Manager
     cordon: Cordon
     uncordon: Uncordon
     addHotplug: Add Volume
@@ -163,18 +177,26 @@ harvester:
     reboot: Reboot
     forceStop: Force Stop
   tableHeaders:
+    imageEncryption: Encryption
     size: Size
     virtualSize: Virtual Size
     progress: Progress
     message: Message
     phase: Phase
     attachedVM: Attached Virtual Machine
+    cpuManager: CPU Manager
     fingerprint: Fingerprint
     value: Value
     actions: Actions
     readyToUse: Ready To Use
     backupTarget: Backup Target
     targetVm: Target Virtual Machine
+    cronExpression: Cron Expression
+    retain: Retain
+    scheduleType: Type
+    maxFailure: Max Failure
+    sourceVm: Source VM
+    vmSchedule: Virtual Machine Schedule
     hostIp: Host IP
     vm:
       ipAddress: IP Address
@@ -196,6 +218,7 @@ harvester:
     accessCredentials: Access Credentials
     pciDevices: PCI Devices
     vGpuDevices: vGPU Devices
+    usbDevices: USB Devices
     vmScheduling: Virtual Machine Scheduling
     quotas: Quotas
     snapshots: Snapshots
@@ -220,6 +243,7 @@ harvester:
     promiscuous: Promiscuous
     ipv4Address: IPv4 address
     filterLabels: Filter labels
+    filterSchedule: Filter schedule
     storageClass: Storage class
     dockerImage: Docker image
   pci:
@@ -257,8 +281,11 @@ harvester:
       suffix: to enable it to manage your PCI devices.
     noPCIPermission: Please contact your system administrator to enable the PCI devices first.
     enablePassthroughWarning: Please be careful not to use host-owned PCI devices (e.g., management and VLAN NICs). Incorrect device allocation may cause damage to your cluster, including node failure.
+
+  devices:
     matrixHostName: Host Name
     matrixDeviceClaimName: Device Claim Name
+  
   generic:
     close: Close
     open: Open
@@ -304,6 +331,7 @@ harvester:
       cpu: CPU
       memory: Memory
       storage: Storage
+      allocated: Allocated
     sections:
       events:
         label: Events
@@ -359,6 +387,7 @@ harvester:
       serialNumber: Serial Number
       model: Model
       etcd: Witness Node
+      cpuManager: CPU Manager
     enableMaintenance:
       title: Enable Maintenance Mode
       protip: The operation will migrate all virtual machines on this node to other nodes.
@@ -504,6 +533,11 @@ harvester:
         ShutdownAndRestartAfterEnable: Shutdown and Restart After Enable
         ShutdownAndRestartAfterDisable: Shutdown and Restart After Disable
         Shutdown: Shutdown
+    cpuPinning:
+      label: Enable CPU Pinning
+      tooltip: Enable CPU Pinning brings better performance and reduce latency for the virtual machine 
+      restartVMMessage: Changing the CPU Pinning setting requires a virtual machine reboot for the change to take effect
+      migrationMessage: This virtual machine can only be migrated to a target node that has CPU Manager enabled, as CPU Pinning is configured.
     restartNow: |-
       {restart, select,
         true {Restart}
@@ -514,6 +548,10 @@ harvester:
     enableUsb: Enable USB Tablet
     advancedOptions:
       tpm: Enable TPM
+      cpuManager:
+        prefix: You must enable CPU Manager for at least one node in
+        middle: 'host page' 
+        suffix: to enable CPU Pinning for VM
     usbTip: Provides an absolute pointer device which often helps with getting a consistent mouse cursor position in VNC.
     sshTitle: Add Public SSH Key
     imageTip: An external URL to the .iso, .img, .qcow2 or .raw that the virtual machine should be created from.
@@ -528,6 +566,7 @@ harvester:
       size: Size
       edit: Edit
       bus:  Bus
+      readyToUse: Ready To Use
       bootOrder: Boot Order
       volume: Volume
       dockerImage: Docker Image
@@ -537,6 +576,10 @@ harvester:
       addContainer: Add Container
       setFirst: Set as root volume
       saveVolume: Update Volume
+      encryption: Encryption
+      lockTooltip:
+        all: All volumes are encrypted.
+        partial: Some volumes are encrypted.
       title:
         vmImage: Image Volume
         existingVolume: Existing Volume
@@ -709,14 +752,21 @@ harvester:
       basics: Basics
     url: URL
     size: Size
+    isEncryption: Encryption
+    encryptionSecret: Encryption Secret
     virtualSize: Virtual Size
     urlTip: 'Supports the <code>raw</code> and <code>qcow2</code> image formats which are supported by <a href="https://www.qemu.org/docs/master/system/images.html#disk-image-file-formats" target="_blank">qemu</a>. Bootable ISO images can also be used and are treated like <code>raw</code> images.'
     fileName: File Name
     uploadFile: Upload File
-    source: Source
+    source: Source Type
     sourceType:
       download: URL
       upload: File
+      clone: Clone
+      encrypt: Encrypt
+      decrypt: Decrypt
+    sourceImage: Source Image
+    cryptoOperation: Crypto Operation
     warning:
       uploading: |-
         {count, plural,
@@ -775,6 +825,37 @@ harvester:
       doc: Read the <a href="{url}" target="_blank">documentation</a> before starting the upgrade process. Ensure that you complete procedures that are relevant to your environment and the version you are upgrading to.
       tip: Unmet system requirements and incorrectly performed procedures may cause complete upgrade failure and other issues that require manual workarounds.
       moreNotes: For more details about the release notes, please visit -
+     
+  schedule:
+    label: Virtual Machine Schedules
+    createTitle: Create Schedule
+    createButtonText: Create Schedule
+    scheduleType: Virtual Machine Schedule Type
+    cron: Cron Schedule
+    detail: 
+      namespace: Namespace
+      sourceVM: Source Virtual Machine
+    tabs:
+      basic: Basic
+      backups: Backups
+      snapshots: Snapshots
+    message:
+      noSetting:
+        suffix: before creating a backup schedule
+    retain: 
+      label: Retain
+      count: Count
+      tooltip: Number of up-to-date VM backups to retain. Maximum to 250, minimum to 2. 
+    maxFailure:
+      label: Max Failure 
+      count: Count
+      tooltip: Max number of consecutive failed backups that could be tolerated. If reach this threshold, Harvester controller will suspend the schedule job. This value should less than retain count
+    virtualMachine:
+      title: Virtual Machine Name
+      placeholder: Select a virtual machine
+    type:
+      snapshot: Snapshot
+      backup: Backup
 
   backup:
     label: Virtual Machine Backups
@@ -813,7 +894,6 @@ harvester:
         starting: Backup initiating
         progress: Backup in progress
         complete: Backup completed
-
   restore:
     progress:
       details: Volume details
@@ -892,6 +972,7 @@ harvester:
       tip: 'Specify an IP range in the IPv4 CIDR format. <code>Number of IPs Required = Number of Nodes * 4 + Number of Disks * 2 + Number of Images to Download/Upload </code>. For more information about storage network settings, see the <a href="{url}" target="_blank">documentation</a>.'
     vmForceDeletionPolicy:
       period: Period
+    ratio : Ratio
     autoRotateRKE2Certs:
       expiringInHours: Expiring in
     httpProxy:
@@ -1041,6 +1122,8 @@ harvester:
   storage:
     label: Storage
     useDefault: Use the default storage
+    volumeEncryption: Volume Encryption
+    secret: Secret
     migratable:
       label: Migratable
     numberOfReplicas:
@@ -1144,6 +1227,7 @@ harvester:
       'rancher-vcluster': rancher-vcluster deploys a virtual cluster (vcluster) with Rancher installed.
       'harvester-seeder': harvester-seeder is an add-on that uses IPMI and Redfish to discover hardware information and perform out-of-band operations.
       'harvester-system/harvester-seeder': harvester-seeder is an add-on that uses IPMI and Redfish to discover hardware information and perform out-of-band operations.
+      'harvester-csi-driver-lvm': harvester-csi-driver-lvm is an add-on allowing users to create PVC through the LVM with local devices.
     vmImport:
       titles:
         basic: Basic
@@ -1166,6 +1250,9 @@ harvester:
         location: Driver Location
       parsingSpecError:
         The field 'spec.valuesContent' has invalid format.
+    usbController:
+      titles:
+        basic: Basic
 
   loadBalancer:
     label: Load Balancers
@@ -1281,7 +1368,7 @@ harvester:
     vGpuDevices: vGPU Devices
     showMore: Show More
     parentSriov: Filter By Parent SR-IOV GPU
-    noPermission: Please contact your system admiistrator to add Harvester add-ons first.
+    noPermission: Please contact your system administrator to add Harvester add-ons first.
     goSetting:
       prefix: The nvidia-driver-toolkit add-on is not enabled, click
       middle: here
@@ -1304,6 +1391,27 @@ harvester:
     impossibleSelection: 'There are no hosts with all of the selected devices.'
     howToUseDevice: 'Use the table below to enable vGPU devices you want to use in this virtual machine.'
     deviceInTheSameHost: 'You can only select devices on the same host.'
+
+  usb:
+    label: USB Devices
+    noPermission: Please contact system admin to add Harvester addons first
+    goSetting:
+      prefix: The pcidevices-controller addon is not enabled, click
+      middle: here
+      suffix: to enable it to manage your USB devices.
+    enableGroup: Enable Group
+    disableGroup: Disable Group
+    available: Available USB Devices
+    compatibleNodes: Compatible Nodes
+    impossibleSelection: 'There are no hosts with all of the selected devices.'
+    howToUseDevice: 'Use the table below to enable USB passthrough on each device you want to use in this VM.'
+    deviceInTheSameHost: 'You can only select devices on the same host.'
+    showCompatibility: Show device compatibility matrix
+    hideCompatibility: Hide device compatibility matrix
+    claimError: Error enabling passthrough on {name}
+    unclaimError: Error disabling passthrough on {name}
+    cantUnclaim: You cannot disable passthrough on a device claimed by another user.
+    enablePassthroughWarning: 'Please re-enable the USB device if the device path changes in the following situations:<br/>&nbsp1) Re-plugging the USB device.<br/>&nbsp2) Rebooting the node.<br/><br/>An incorrect device path may cause passthrough to fail.'
 
   harvesterVlanConfigMigrateDialog:
     targetClusterNetwork:
@@ -1383,6 +1491,7 @@ advancedSettings:
     'harv-auto-rotate-rke2-certs': The certificate rotation mechanism relies on Rancher. Harvester will automatically update certificates generation to trigger rotation.
     'harv-kubeconfig-default-token-ttl-minutes': 'TTL (in minutes) applied on Harvester administration kubeconfig files. Default is 0, which means to never expire.'
     'harv-longhorn-v2-data-engine-enabled': 'Enable the Longhorn V2 data engine. Default is false. <ul><li>Changing this setting will restart RKE2 on all nodes. This will not affect running VM workloads.</li><li>If you see "not enough hugepages-2Mi capacity" errors when enabling this setting, wait a minute for the error to clear. If the error remains, reboot the affected node.</li></ul>'
+    'harv-additional-guest-memory-overhead-ratio': 'The ratio for kubevirt to adjust the VM overhead memory. The value could be zero, empty value or floating number between 1.0 and 10.0, default to 1.5.'
 
 typeLabel:
   kubevirt.io.virtualmachine: |-
@@ -1429,6 +1538,11 @@ typeLabel:
     {count, plural,
       one { Template }
       other { Templates }
+    }
+  harvesterhci.io.schedulevmbackup: |-
+    {count, plural,
+      one { Virtual Machine Schedule }
+      other { Virtual Machine Schedules }
     }
   harvesterhci.io.virtualmachinebackup: |-
     {count, plural,
