--- a/pkg/harvester/l10n/en-us.yaml
+++ b/pkg/harvester/l10n/en-us.yaml
@@ -114,14 +114,13 @@ harvester:
         success: 'Take Snapshot { name } successfully.'
         support:
           longhorn: The volume uses Longhorn V2 engine, which does not <a href="https://docs.harvesterhci.io/v1.4/advanced/longhorn-v2/#limitations" target="_blank">support</a> the Take Snapshot action.
-  
     volumeClone:
       title: Clone Volume
       name: Name
       message:
         success: 'New Volume { name } cloned successfully.'
         support:
-          longhorn: The volume uses Longhorn V2 engine, which does not <a href="https://docs.harvesterhci.io/v1.4/advanced/longhorn-v2/#limitations" target="_blank">support</a> the clone action.
+          longhorn: The volume uses Longhorn V2 engine, which does not <a href="https://docs.harvesterhci.io/v1.4/advanced/longhorn-v2/#limitations" target="_blank">support</a> the Clone action.
     restoreSnapshot:
       title: Restore Snapshot
       name: 'New Volume Name'
@@ -129,7 +128,10 @@ harvester:
     vmSnapshot:
       title: Take Virtual Machine Snapshot
       name: Name
-      success: 'Take virtual machine Snapshot { name } successfully.'
+      message:
+        success: 'Take virtual machine Snapshot { name } successfully.'
+        support:
+          longhorn: The VM uses Longhorn v2 volumes, which do not <a href="https://docs.harvesterhci.io/v1.4/advanced/longhorn-v2/#limitations" target="_blank">support</a> the Take Snapshot action.
     restart:
       title: Restart Virtual Machine
       tip: Restart the virtual machine for configuration changes to take effect.
